crates/lexing/tests/snapshots/lexer__leading_zero_consumes_token.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    NUMBER,
    WHITESPACE,
    MODULE,
    END_OF_FILE,
]
