crates/lexing/tests/snapshots/lexer__lenient_raw_string_single_end.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    RAW_STRING,
    END_OF_FILE,
]
