crates/lexing/tests/snapshots/lexer__line_comment.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    LINE_COMMENT,
    WHITESPACE,
    LINE_COMMENT,
    END_OF_FILE,
]
