crates/lexing/tests/snapshots/lexer__lower.snap
---
source: crates/lexing/tests/lexer.rs
description: "add\n\nPrelude.add\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : LOWER
      text : "add"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : "Prelude."
      kind : LOWER
      text : "add"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 4, column: 1 }
     error : None
