crates/lexing/tests/snapshots/lexer__number.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    NUMBER,
    END_OF_FILE,
]
