crates/lexing/tests/snapshots/lexer__operator_name_non_glue_export_all.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    LEFT_PARENTHESIS,
    DOUBLE_PERIOD,
    RIGHT_PARENTHESIS,
    END_OF_FILE,
]
