crates/lexing/tests/snapshots/lexer__operator_name_non_glue_type_int.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    LEFT_PARENTHESIS,
    MINUS,
    INTEGER,
    RIGHT_PARENTHESIS,
    END_OF_FILE,
]
