crates/lexing/tests/snapshots/lexer__operator_name_non_glue_type_var.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    LEFT_PARENTHESIS,
    AT,
    LOWER,
    WHITESPACE,
    DOUBLE_COLON,
    WHITESPACE,
    UPPER,
    RIGHT_PARENTHESIS,
    END_OF_FILE,
]
